<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zillow Search</string>
    <string name="app_title">CSCI 571 - Zillow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_app">Search Your Property Here</string>
    <string name="address_app">Address*:</string>
    <string name="s_address_app">Street Address</string>
    <string name="city_app">City*:</string>
    <string name="s_city_app">City</string>
    <string name="state_app">State*:</string>
    <string name="search_app">Search</string>

    <string-array name="state_list">
        <item>Choose State</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="state_prompt">Choose State</string>
    <string name="ZillowImg">Provided by Zillow</string>
    <string name="blank"></string>
    <string name="error_msg">This field is required</string>
    <string name="title_activity_resut">Results from Zillow</string>
    <string name="title_activity_result">Results from Zillow</string>
    <string name="title_section1">Basic Info</string>
    <string name="title_section2">Historical Zestimates</string>
    <string name="title_section3">Section 3</string>
    <string name="z1">\u00A9 Zillow, Inc., 2006-2014</string>
    <string name="z2">Use is subject to <a href="http://www.zillow.com/corp/Terms.htm">Terms of Use</a></string>
    <string name="z3"><a href="http://www.zillow.com/zestimate/">What is a Zestimate?</a></string>
    <string name="facebook_app_id">893487580676264</string>
    <string name="app_id">893487580676264</string>
    <string name="title_activity_share_post">Results from Zillow</string>

</resources>
