<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="real.estate.zillowsearch.ImageFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/z3"
        android:autoLink="web"
        android:linksClickable="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<RelativeLayout 
         android:id="@+id/linearParent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"  
        android:layout_above="@+id/textView3"
        android:layout_below="@+id/section_label"
    >
    
    <TextSwitcher
        android:id="@+id/textSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:padding="10dp" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSwitcher"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <ImageSwitcher
         android:id="@+id/imageSwitcher"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView5" 
          android:layout_above="@+id/cover_btn">

    </ImageSwitcher>
    <LinearLayout
        android:id="@+id/cover_btn"
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
  <Button
             android:id="@+id/p_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"   
             android:text="Previous" />

      <Button
          android:id="@+id/n_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="@dimen/btn_padding"
          android:paddingRight="@dimen/btn_padding"
          android:text="Next" />

      </LinearLayout>
    
</RelativeLayout>

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView2"
    android:layout_centerHorizontal="true"
    android:text="@string/z1"
    android:textAppearance="?android:attr/textAppearanceSmall" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView1"
    android:layout_centerHorizontal="true"
    android:autoLink="web"
    android:text="@string/z2"
    android:linksClickable="true"
    android:textAppearance="?android:attr/textAppearanceSmall" />
    
</RelativeLayout>
